OTP Function fully completed

--- a/mysite/account/templates/account/login.html
+++ b/mysite/account/templates/account/login.html
@@ -25,6 +25,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </fieldset>
     </form>
+     <button type="submit" class="btn btn-primary forgot-password" onClick="location.href='{% url 'otp_request_page' %}'" style="margin-top: 5px; margin-left: 20px;">Forgot Password</button>
     <button type="submit" class="btn btn-primary" onClick="location.href='{% url 'register' %}'" style="float: right; margin-right: 20px;">REGISTER</button>
     <label class="col-form-label" for="inputDefault" style="float: right; margin-right: 20px;">Don't have an account?</label>
 </body>
